--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mysten/sui": "^1.43.2",
     "next": "16.0.1",
     "openai": "^4.104.0",
     "react": "19.2.0",
